# axum-template

./: .env  Cargo.toml  README.md
src/: main.rs
src/controllers/: common_controller.rs
src/entity/: user.rs
src/routes/: common_routes.rs
